putting button and hiding the same

--- a/PubSub/orders/asynchronous_order_placement/async.html
+++ b/PubSub/orders/asynchronous_order_placement/async.html
@@ -76,6 +76,8 @@
                 <h1 id="timeheader">
                     <time>00:00:00</time>
                 </h1>
+                <button id="start" class="hidden">start</button>
+                <button id="stop" class="hidden">stop</button>
                 <button id="clear">clear</button>
             </div>
         </div>
